<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/def_view1"
            android:layout_width="match_parent"
            android:layout_height="3sp"
            android:background="@color/quote"
            app:layout_constraintTop_toBottomOf="@+id/def_rand_word"
            android:layout_marginTop="30sp">
        </View>

        <View
            android:id="@+id/def_view2"
            android:layout_width="match_parent"
            android:layout_height="3sp"
            android:background="@color/quote"
            app:layout_constraintTop_toBottomOf="@+id/def_word"
            android:layout_marginTop="40sp">
        </View>

        <View
            android:id="@+id/def_view3"
            android:layout_width="match_parent"
            android:layout_height="3sp"
            android:background="@color/quote"
            app:layout_constraintTop_toBottomOf="@+id/def_def_out"
            android:layout_marginTop="30sp">
        </View>

        <View
            android:id="@+id/def_view4"
            android:layout_width="match_parent"
            android:layout_height="3sp"
            android:background="@color/quote"
            app:layout_constraintTop_toBottomOf="@+id/def_syn_out"
            android:layout_marginTop="30sp">
        </View>

        <View
            android:id="@+id/def_view5"
            android:layout_width="match_parent"
            android:layout_height="3sp"
            android:background="@color/quote"
            app:layout_constraintTop_toBottomOf="@+id/def_ant_out"
            android:layout_marginTop="30sp">
        </View>

        <View
            android:id="@+id/def_view6"
            android:layout_width="match_parent"
            android:layout_height="3sp"
            android:background="@color/quote"
            app:layout_constraintTop_toBottomOf="@+id/def_mer_out"
            android:layout_marginTop="30sp">
        </View>

        <View
            android:id="@+id/def_view7"
            android:layout_width="match_parent"
            android:layout_height="3sp"
            android:layout_marginTop="30sp"
            android:background="@color/quote"
            app:layout_constraintTop_toBottomOf="@+id/def_ex_out">
        </View>

        <View
            android:id="@+id/def_view8"
            android:layout_width="match_parent"
            android:layout_height="3sp"
            android:layout_marginTop="30sp"
            android:background="@color/quote"
            app:layout_constraintTop_toBottomOf="@+id/def_guess_save">
        </View>

        <TextView
            android:id="@+id/def_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/def_text1"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30sp"
            android:layout_marginLeft="20sp"
            android:fontFamily="@font/inter_font">
        </TextView>

        <android.widget.Button
            android:id="@+id/def_rand_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="5sp"
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/def_input_lay"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40sp"
            android:text="Get a random word"
            android:textColor="@color/warning"
            android:textSize="23sp"
            android:padding="18sp"
            android:background="@drawable/definition_search_btn"
            android:fontFamily="@font/inter_font"
            android:textAllCaps="false">
        </android.widget.Button>

        <ImageView
            android:layout_width="45sp"
            android:layout_height="45sp"
            android:layout_marginTop="40sp"
            android:layout_marginLeft="20sp"
            android:src="@drawable/definition"
            app:layout_constraintStart_toEndOf="@+id/def_def"
            app:layout_constraintTop_toBottomOf="@+id/def_view2">
        </ImageView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/def_input_lay"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="40sp"
            app:layout_constraintTop_toBottomOf="@+id/def_text1"
            android:hint="e.g Dog">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/def_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="1sp"
                android:maxLength="18"
                android:textSize="20sp"
                android:padding="18sp"
                android:background="@drawable/profile_back_set"
                android:fontFamily="@font/inter_font">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/def_search_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="#00FFFFFF"
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawableTop="@drawable/search"
            android:text="(search)"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/def_input_lay"
            app:layout_constraintTop_toBottomOf="@+id/def_text1">
        </androidx.appcompat.widget.AppCompatButton>

        <TextView
            android:id="@+id/def_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/def_name"
            android:textSize="27sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/def_view1"
            android:layout_marginTop="40sp"
            android:layout_marginLeft="30sp"
            android:fontFamily="@font/inter_font">
        </TextView>

        <TextView
            android:id="@+id/def_word_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="---"
            android:maxLength="20"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/def_word"
            app:layout_constraintTop_toBottomOf="@+id/def_view1"
            android:layout_marginTop="40sp"
            android:layout_marginLeft="50sp"
            android:fontFamily="@font/inter_font">
        </TextView>

        <TextView
            android:id="@+id/def_def"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/def_def"
            android:textSize="27sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/def_view2"
            android:layout_marginTop="40sp"
            android:layout_marginLeft="30sp"
            android:fontFamily="@font/inter_font">
        </TextView>

        <TextView
            android:id="@+id/def_def_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_font"
            android:padding="20sp"
            android:lineSpacingExtra="10sp"
            android:layout_marginTop="10sp"
            android:text="---"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/def_def">
        </TextView>

        <TextView
            android:id="@+id/def_syn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/def_syn"
            android:textSize="27sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/def_view3"
            android:layout_marginTop="40sp"
            android:layout_marginLeft="30sp"
            android:fontFamily="@font/inter_font">
        </TextView>

        <ImageView
            android:layout_width="45sp"
            android:layout_height="45sp"
            android:layout_marginTop="40sp"
            android:layout_marginLeft="20sp"
            android:src="@drawable/synonym"
            app:layout_constraintStart_toEndOf="@+id/def_syn"
            app:layout_constraintTop_toBottomOf="@+id/def_view3">
        </ImageView>

        <TextView
            android:id="@+id/def_syn_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="---"
            android:layout_marginTop="10sp"
            android:textSize="24sp"
            android:lineSpacingExtra="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/def_syn"
            android:padding="20sp"
            android:fontFamily="@font/inter_font">
        </TextView>

        <TextView
            android:id="@+id/def_ant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/def_ant"
            android:textSize="27sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/def_view4"
            android:layout_marginTop="40sp"
            android:layout_marginLeft="30sp"
            android:fontFamily="@font/inter_font">
        </TextView>

        <ImageView
            android:layout_width="45sp"
            android:layout_height="45sp"
            android:layout_marginTop="40sp"
            android:layout_marginLeft="20sp"
            android:src="@drawable/opposed"
            app:layout_constraintStart_toEndOf="@+id/def_ant"
            app:layout_constraintTop_toBottomOf="@+id/def_view4">
        </ImageView>

        <TextView
            android:id="@+id/def_ant_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="---"
            android:lineSpacingExtra="10sp"
            android:layout_marginTop="10sp"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/def_ant"
            android:padding="20sp"
            android:fontFamily="@font/inter_font">
        </TextView>

        <ImageView
            android:layout_width="45sp"
            android:layout_height="45sp"
            android:layout_marginTop="40sp"
            android:layout_marginLeft="20sp"
            android:src="@drawable/related"
            app:layout_constraintStart_toEndOf="@+id/def_mer"
            app:layout_constraintTop_toBottomOf="@+id/def_view5">
        </ImageView>

        <TextView
            android:id="@+id/def_mer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/def_mer"
            android:textSize="27sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/def_view5"
            android:layout_marginTop="40sp"
            android:layout_marginLeft="30sp"
            android:fontFamily="@font/inter_font">
        </TextView>

        <TextView
            android:id="@+id/def_mer_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="---"
            android:layout_marginTop="10sp"
            android:textSize="24sp"
            android:lineSpacingExtra="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/def_mer"
            android:padding="20sp"
            android:fontFamily="@font/inter_font">
        </TextView>

        <TextView
            android:id="@+id/def_ex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/def_ex"
            android:textSize="27sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/def_view6"
            android:layout_marginTop="40sp"
            android:layout_marginLeft="30sp"
            android:fontFamily="@font/inter_font">
        </TextView>

        <ImageView
            android:layout_width="45sp"
            android:layout_height="45sp"
            android:layout_marginTop="40sp"
            android:layout_marginLeft="20sp"
            android:src="@drawable/example"
            app:layout_constraintStart_toEndOf="@+id/def_ex"
            app:layout_constraintTop_toBottomOf="@+id/def_view6">
        </ImageView>

        <TextView
            android:id="@+id/def_ex_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="---"
            android:lineSpacingExtra="10sp"
            android:layout_marginTop="10sp"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/def_ex"
            android:padding="20sp"
            android:fontFamily="@font/inter_font">
        </TextView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/def_guess_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingBottom="20sp"
            android:textSize="20sp"
            android:background="#00FFFFFF"
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawableLeft="@drawable/save"
            android:text=" Save word"
            android:textAllCaps="false"
            android:layout_marginLeft="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/def_view7">
        </androidx.appcompat.widget.AppCompatButton>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>