<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/first_time"
        android:orientation="vertical">

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="3sp"
            app:layout_constraintTop_toBottomOf="@+id/lang_text"
            android:layout_marginTop="30sp"
            android:background="@color/quote">
        </View>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="3sp"
            app:layout_constraintTop_toBottomOf="@+id/lang_lang1"
            android:layout_marginTop="20sp"
            android:background="@color/quote">
        </View>

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="3sp"
            android:background="@color/quote"
            app:layout_constraintTop_toBottomOf="@id/lang_lang3"
            android:layout_marginTop="20sp">
        </View>

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="3sp"
            android:background="@color/quote"
            app:layout_constraintTop_toBottomOf="@id/lang_timer_minus"
            android:layout_marginTop="20sp">
        </View>

        <View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="3sp"
            android:background="@color/quote"
            app:layout_constraintTop_toBottomOf="@id/lang_input_alt_lay"
            android:layout_marginTop="20sp">
        </View>

        <View
            android:id="@+id/view6"
            android:layout_width="match_parent"
            android:layout_height="3sp"
            android:background="@color/quote"
            app:layout_constraintTop_toBottomOf="@id/lang_on_off"
            android:layout_marginTop="20sp">
        </View>

        <TextView
            android:id="@+id/lang_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_title"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30sp"
            android:layout_marginLeft="30sp"
            android:fontFamily="@font/inter_font">
        </TextView>

        <TextView
            android:id="@+id/lang_select_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="30sp"
            app:layout_constraintTop_toBottomOf="@+id/view1"
            android:layout_marginTop="20sp"
            android:text="@string/lang_s1"
            android:textSize="20sp"
            android:fontFamily="@font/inter_font">
        </TextView>

        <TextView
            android:id="@+id/lang_lang1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="English"
            android:elevation="5sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lang_select_text"
            android:layout_marginTop="25sp"
            android:layout_marginLeft="40sp"
            android:textSize="25sp"
            android:padding="18sp"
            android:background="@drawable/back_lang_english"
            android:fontFamily="@font/inter_font">
        </TextView>

        <Button
            android:id="@+id/lang_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginLeft="20sp"
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"
            android:backgroundTint="#00FFFFFF"
            android:drawableLeft="@drawable/modify"
            android:fontFamily="@font/inter_font"
            android:text="(modify)"
            android:textColor="@color/warning"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/lang_lang1"
            app:layout_constraintTop_toBottomOf="@+id/lang_select_text">
        </Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lang_lang2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2"
            android:layout_marginTop="20sp"
            android:layout_marginLeft="30sp"
            android:text="@string/lang_s2"
            android:textSize="20sp"
            android:fontFamily="@font/inter_font">
        </TextView>

        <TextView
            android:id="@+id/lang_lang3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="French"
            android:elevation="5sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lang_lang2"
            android:layout_marginTop="25sp"
            android:layout_marginLeft="40sp"
            android:textSize="25sp"
            android:padding="18sp"
            android:background="@drawable/back_lang_french"
            android:fontFamily="@font/inter_font">
        </TextView>

        <Button
            android:id="@+id/lang_btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/lang_lang1"
            app:layout_constraintTop_toBottomOf="@+id/lang_lang2"
            android:layout_marginTop="36sp"
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"
            android:textStyle="bold"
            android:text="(modify)"
            android:layout_marginLeft="20sp"
            android:textColor="@color/warning"
            android:backgroundTint="#00FFFFFF"
            android:drawableLeft="@drawable/modify"
            android:fontFamily="@font/inter_font">
        </Button>

        <TextView
            android:id="@+id/lang_lang4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lang_s3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view3"
            android:layout_marginTop="20sp"
            android:layout_marginLeft="30sp"
            android:textSize="20sp"
            android:fontFamily="@font/inter_font">
        </TextView>

        <TextView
            android:id="@+id/lang_timer_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="44dp"
            android:fontFamily="@font/inter_font"
            android:text="1"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lang_lang4">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            app:layout_constraintStart_toEndOf="@+id/lang_timer_h"
            app:layout_constraintEnd_toStartOf="@+id/lang_timer_m"
            app:layout_constraintTop_toTopOf="@+id/lang_timer_h"
            app:layout_constraintBottom_toBottomOf="@+id/lang_timer_h"
            android:textSize="30sp"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:id="@+id/lang_timer_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="44dp"
            android:fontFamily="@font/inter_font"
            android:text="00"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/lang_timer_h"
            app:layout_constraintTop_toBottomOf="@+id/lang_lang4">
        </TextView>

        <TextView
            android:id="@+id/lang_timer_aux"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="44dp"
            android:fontFamily="@font/inter_font"
            android:text="h"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/lang_timer_m"
            app:layout_constraintTop_toBottomOf="@+id/lang_lang4">
        </TextView>

        <Button
            android:id="@+id/lang_timer_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/lang_timer_aux"
            app:layout_constraintTop_toBottomOf="@+id/lang_lang4"
            android:layout_marginTop="25sp"
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"
            android:layout_marginLeft="40sp"
            android:fontFamily="@font/inter_font"
            android:text="1h"
            android:textColor="@color/black"
            android:backgroundTint="#00FFFFFF"
            android:drawableTop="@drawable/timer_minus">
        </Button>

        <Button
            android:id="@+id/lang_timer_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lang_lang4"
            android:layout_marginTop="25sp"
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"
            android:layout_marginRight="20sp"
            android:fontFamily="@font/inter_font"
            android:text="1h"
            android:textColor="@color/black"
            android:background="#00FFFFFF"
            android:drawableTop="@drawable/timer_plus">
        </Button>

        <TextView
            android:id="@+id/lang_lang5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lang_s4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view4"
            android:layout_marginTop="20sp"
            android:layout_marginLeft="30sp"
            android:textSize="20sp"
            android:fontFamily="@font/inter_font">
        </TextView>

        <android.widget.Button
            android:id="@+id/lang_word_type_common"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="5sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lang_lang5"
            android:layout_marginTop="40sp"
            android:text="Common"
            android:textColor="@color/warning"
            android:layout_marginLeft="40sp"
            android:textSize="25sp"
            android:padding="18sp"
            android:background="@drawable/profile_back_set"
            android:fontFamily="@font/inter_font"
            android:textAllCaps="false">
        </android.widget.Button>

        <android.widget.Button
            android:id="@+id/lang_word_type_random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="5sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lang_lang5"
            android:layout_marginTop="40sp"
            android:text="Advanced"
            android:textColor="@color/warning"
            android:layout_marginRight="40sp"
            android:textSize="25sp"
            android:padding="18sp"
            android:background="@drawable/back_lang_random"
            android:fontFamily="@font/inter_font"
            android:textAllCaps="false">
        </android.widget.Button>

        <TextView
            android:id="@+id/lang_lang6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lang_s5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view5"
            android:layout_marginTop="40sp"
            android:layout_marginLeft="30sp"
            android:textSize="20sp"
            android:fontFamily="@font/inter_font">
        </TextView>

        <ToggleButton
            android:id="@+id/lang_on_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/lang_on_off"
            android:elevation="5sp"
            android:fontFamily="@font/inter_font"
            android:padding="18sp"
            android:textAllCaps="false"
            android:textColor="@color/warning"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/lang_lang6"
            app:layout_constraintTop_toBottomOf="@+id/view5">
        </ToggleButton>

        <ImageView
            android:layout_width="55sp"
            android:layout_height="55sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/view1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lang_text"
            android:src="@drawable/notification">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lang_alt_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lang_word_type_common"
            android:layout_marginTop="40sp"
            android:layout_marginLeft="30sp"
            android:text="@string/lang_alt"
            android:textSize="20sp"
            android:fontFamily="@font/inter_font">
        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lang_input_alt_lay"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="40sp"
            android:layout_marginTop="20sp"
            app:layout_constraintTop_toBottomOf="@+id/lang_alt_text_latest"
            android:hint="e.g Condiments">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lang_input_alt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="1sp"
                android:maxLength="18"
                android:textSize="20sp"
                android:padding="18sp"
                android:background="@drawable/profile_back_set"
                android:fontFamily="@font/inter_font">
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/lang_alt_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="#00FFFFFF"
            android:drawableLeft="@drawable/modify"
            android:fontFamily="@font/inter_font"
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"
            android:text="(set)"
            android:textColor="@color/warning"
            android:textStyle="bold"
            android:layout_marginLeft="15sp"
            app:layout_constraintStart_toEndOf="@+id/lang_input_alt_lay"
            app:layout_constraintTop_toBottomOf="@+id/lang_alt_text_latest">
        </Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lang_alt_text_latest"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lang_alt_text"
            android:layout_marginTop="40sp"
            android:layout_marginLeft="30sp"
            android:text="@string/latest"
            android:textSize="20sp"
            android:fontFamily="@font/inter_font">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lang_alt_text_id"
            app:layout_constraintStart_toEndOf="@+id/lang_alt_text_latest"
            app:layout_constraintTop_toBottomOf="@+id/lang_alt_text"
            android:layout_marginTop="40sp"
            android:layout_marginLeft="30sp"
            android:textSize="20sp"
            android:fontFamily="@font/inter_font">
        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>